@@ -1,4 +1,4 @@
-SUBDIRS = m4macros doc scripts libglimmer libglimmer-solve libglide libglint tests example-drivers
+SUBDIRS = m4macros doc scripts libglimmer libglimmer-solve libglide libglint utils tests example-drivers
 EXTRA_DIST = make.rules glimmer-cism-config.in
 
 datadir = tests example-drivers
