@@ -1,0 +1,10 @@
+bin_PROGRAMS  =
+
+if BUILD_COMPARE
+ bin_PROGRAMS += compare
+endif
+
+LDADD = $(NETCDF_LDFLAGS) $(NETCDF_CXX_LIBS)
+AM_CPPFLAGS = $(NETCDF_CPPFLAGS)
+
+compare_SOURCES = compare.cpp
